# jvav-language

JvavCompiler/: CMakeLists.txt  LLVM_INSTALL.md  README.md  build.bat  build.sh
JvavCompiler/examples/: 1.toilet  ask_example.toilet  compile_wat.js  compile_wat_browser.html  hello.wat  run_hello.html  string_example.wasm  string_example.wat  string_runtime.js  wasm_runner.html  wat2wasm.js
JvavCompiler/include/: JvavCompiler.h
JvavCompiler/include/ast/: AST.h
JvavCompiler/include/codegen/: CodeGenerator.h  LLVMCodeGenerator.h
JvavCompiler/include/compiler/: Functions.h
JvavCompiler/include/lexer/: Lexer.h  Token.h
JvavCompiler/include/optimizer/: Optimizer.h
JvavCompiler/include/parser/: Parser.h
JvavCompiler/src/: JvavCompiler.cpp  main.cpp
JvavCompiler/src/codegen/: CodeGenerator.cpp  LLVMCodeGenerator.cpp  LLVMCodeGenerator.h
JvavCompiler/src/lexer/: Lexer.cpp  Token.cpp
JvavCompiler/src/optimizer/: Optimizer.cpp
JvavCompiler/src/parser/: Parser.cpp
JvavCompiler/src/repl/: JvavREPL.cpp  JvavREPL.h  jvav_terminal.cpp  wasm_runner.js
JvavVSCode/: jvav-language-support-0.1.0.vsix  language-configuration.json  package-lock.json  package.json
JvavVSCode/snippets/: jvav.json
JvavVSCode/src/: extension.ts
JvavVSCode/syntaxes/: jvav.tmLanguage.json
examples/: hello.toilet
